--- a/styles.css
+++ b/styles.css
@@ -2,7 +2,6 @@
   box-sizing: border-box;
   padding: 0;
   margin: 0;
-  /* border: 1px solid black; */
 }
 
 body {
@@ -31,12 +30,14 @@ body {
   justify-content: center;
 }
 
-.container button {
+.container .button {
   position: absolute;
   cursor: pointer;
-  padding: 5px;
-  margin: 10px;
+  padding: 10px;
   border-radius: 10%;
+  color: white;
+  background-color: rgba(0, 0, 0, 0.5);
+  letter-spacing: -5px;
 }
 
 #prev {
